# image_determinator

./: README.md  pyproject.toml
image_determinator/: db.sqlite3  manage.py
image_determinator/app/: forms.py  image_determinator.py  models.py  tests.py  views.py
image_determinator/app/migrations/: 0001_initial.py  0002_rename_classification_result_image_result.py
image_determinator/app/static/css/: style.css
image_determinator/app/templates/image_determinator/: upload_and_result.html
image_determinator/image_determinator/: asgi.py  settings.py  urls.py  wsgi.py
